# backend/src/main/resources/openapi.yaml
@@ -323,6 +323,27 @@ paths:
           description: Lesson not found
 
   /words:
+    post:
+      summary: Translate word
+      tags:
+        - Word
+      operationId: translateWord
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/TranslationDTO'
+      responses:
+        '200':
+          description: Word tranlsated
+          content:
+            application/json:
+              schema:
+                type: string
+        '400':
+          description: Invalid input
+
     put:
       summary: Update and/or delete words
       parameters:
@@ -524,6 +545,25 @@ components:
       required:
         - appUserName
         - password
+
+    TranslationDTO:
+      type: object
+      properties:
+        text:
+          type: string
+          minLength: 1
+          maxLength: 20
+          example: "kočka"
+        sourceLang:
+          type: string
+          example: "CS"
+        targetLang:
+          type: string
+          example: "en-GB"
+      required:
+        - text
+        - sourceLang
+        - targetLang
 
   parameters:
     UserIdHeader:
